# rust-axum-inv-system

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: database.rs  errors.rs  lib.rs
api/src/commands/: ingredient.rs
api/src/routes/: ingredient.rs  mod.rs
api/tests/: ingredient_tests.rs
api/tests/common/: mod.rs
database/: postgres_init.sql
entity/: Cargo.toml
entity/src/: ingredient.rs  ingredients_to_meals.rs  lib.rs  meal.rs  prelude.rs
migration/src/: lib.rs  m20240812_194930_create_ingredient_table.rs  m20240812_201251_create_meals_table.rs  m20240812_201341_create_ingredients_to_meals_table.rs
src/: main.rs
